--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,6 +11,13 @@
   </head>
 
   <body>
+    <nav>
+      <a href="/">Home</a>
+      <a href="/celebrities/create">Add celebrity</a>
+      <a href="/celebrities">Celebrities</a>
+      <a href="/movies/create">Add movie</a>
+      <a href="/movies">List of movies</a>
+    </nav>
     <div class="container">
       {{{body}}}
     </div>
